2004-09-04    <tino@firebird.03.softkill.net>

	* Makefile, test.sh, memwild.c: Started adding unit tests