@@ -1,7 +1,10 @@
 # $Header$
 #
 # $Log$
-# Revision 1.2  2004-09-04 20:18:29  tino
+# Revision 1.3  2004-12-19 16:38:13  tino
+# new unit test version for builtin unit tests, prepare to integrate in tinolib
+#
+# Revision 1.2  2004/09/04 20:18:29  tino
 # clean added
 #
 # Revision 1.1  2004/09/04 20:15:22  tino
@@ -11,4 +14,4 @@ all:
 	./tests.sh
 
 clean:
-	rm -rf TEST_*
+	$(RM) -r TEST_* GEN *~
